# rust

./: README.md
a_bad_database/: Cargo.toml
a_bad_database/data/: customers.csv
a_bad_database/src/: customer.rs  main.rs  product.rs  transaction.rs
advent_of_code_2022/: Cargo.toml  README.md
advent_of_code_2022/src/: day2.rs  day3.rs  lib.rs
advent_of_code_2022_rs/src/: day1.rs  day2.rs  lib.rs
an_odd_website_axum/: Cargo.toml
an_odd_website_axum/data/: clients.csv  employees.csv  exports.csv  jobs.csv  settings.csv
an_odd_website_axum/src/: main.rs
an_odd_website_axum/src/router/: clients.rs  employees.rs  exporters.rs  helpers.rs  mod.rs  routes.rs  settings.rs  website.rs
an_odd_website_axum/static/: accounting.html  clients.html  employees.html  index.html  settings.html
an_odd_website_axum/static/components/: dashboard.html  head.html  navbar.html
an_odd_website_axum/static/scripts/: accounting.js  clients.js  employees.js  settings.js
an_odd_website_axum/static/styles/: style.css
an_odd_website_rocket/: Cargo.toml
an_odd_website_rocket/static/: accounting.html  clients.html  clients.js  employees.html  index.html
an_odd_website_rocketrs/: README.md
an_odd_website_rocketrs/data/: clients.csv
book_and_movie_server/: Cargo.toml
bookings/: Cargo.toml
bookings_rs/: Cargo.toml  README.md
console_apps/: Cargo.toml
console_apps_rs/: README.md
employee_data/: README.md
first_assignment/: Cargo.toml
first_assignment_rs/: README.md
functional_methods_rs/: README.md
noughts_and_crosses/: README.md
pathfinder/: README.md
(+107 files in other folders)
