[package]
name = "an_odd_website_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.200", features = ["derive"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
